# docs/swagger.yaml
@@ -95,6 +95,27 @@ definitions:
       user_id:
         type: string
     type: object
+  schema.UpdateUserInput:
+    properties:
+      image_url:
+        type: string
+      is_organizer:
+        type: boolean
+      message:
+        type: string
+      name:
+        type: string
+      skills:
+        additionalProperties:
+          type: string
+        type: object
+      urls:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: string
+    type: object
 host: server-u7kyixk36q-an.a.run.app
 info:
   contact:
@@ -233,6 +254,45 @@ paths:
       security:
       - Bearer: []
       summary: 自分の情報
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: ユーザー情報を更新する
+      parameters:
+      - description: 更新するユーザー情報(更新後の情報を全て含む必要があります)
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/schema.UpdateUserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: ユーザー情報更新
       tags:
       - User
   /user:
